# Neurodeck

./: CLAUDE.md  pyproject.toml  run_tests.py
.claude/: settings.local.json
src/gpt_to_anki/: __init__.py  anki_base.py  anki_connect.py  anki_models.py  anki_sync.py  app.py  cards_generator.py  data_objects.py  database.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: test_anki_sync_integration.py
tests/unit/: test_anki_base.py  test_anki_connect.py  test_anki_models.py  test_anki_sync.py  test_database_anki_feedback.py
