[project]
name = "gpt-to-anki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Julius Juodagalvis", email = "julius.juodagalvis@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
gpt-to-anki = "gpt_to_anki:main"

[build-system]
requires = ["uv_build>=0.7.17,<0.8"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=9.4.0",
    "ipywidgets>=8.1.7",
    "pytest>=8.4.1",
]
