[project]
name = "gpt-to-anki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Julius Juodagalvis", email = "julius.juodagalvis@gmail.com" }
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "dspy (>=2.6.27,<3.0.0)",
    "chainlit (>=2.6.0,<3.0.0)",
    "streamlit>=1.46.1",
    "gradio>=5.0.0",
    "pypdf2>=3.0.1",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "requests>=2.31.0",
    "pydantic (>=2.11.7,<3.0.0)",
    "aiosqlite>=0.21.0",
    "aiohttp>=3.10.0",
]

[project.scripts]
gpt-to-anki = "gpt_to_anki:main"

[build-system]
requires = ["uv_build>=0.7.17,<0.8"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "ipython>=9.4.0",
    "ipywidgets>=8.1.7",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
